cabal-version:      2.4
name:               leetcode-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             vincenteof
maintainer:         14847208+vincenteof@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
     build-depends:    base ^>=4.14.3.0
     default-language: Haskell2010
     ghc-options:      -Wall

executable leetcode-hs
    import:           common-settings
    main-is:          Main.hs
    other-modules:    LeetCode
    hs-source-dirs:   app, src

library leetcode-core
    import:           common-settings
    exposed-modules:  LeetCode, Solution121
    hs-source-dirs:   src

test-suite leetcode-tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: test
    build-depends:
        base ^>=4.14.3.0,
        HUnit ^>=1.6,
        leetcode-core
    