cabal-version:      2.4
name:               leetcode-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             vincenteof
maintainer:         14847208+vincenteof@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
     build-depends:    base ^>=4.14.3.0, containers
     default-language: Haskell2010
     ghc-options:      -Wall

executable leetcode-hs
    import:           common-settings
    main-is:          Main.hs
    hs-source-dirs:   app, src

library leetcode-core
    import:           common-settings
    exposed-modules:  Solution4, Solution17, Solution46, Solution47, Solution94, Solution121, Solution215, Solution784, Tree
    hs-source-dirs:   src

test-suite leetcode-tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:  Solution4Spec, Solution17Spec, Solution46Spec, Solution47Spec, Solution94Spec, Solution121Spec, Solution215Spec, Solution784Spec
    hs-source-dirs: test
    build-depends:
        base ^>=4.14.3.0,
        hspec >= 2.7,
        leetcode-core
    