cabal-version:      2.4
name:               leetcode-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             vincenteof
maintainer:         14847208+vincenteof@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
  build-depends:
    , base        ^>=4.14.3.0
    , containers

  default-language: Haskell2010
  ghc-options:      -Wall

executable leetcode-hs
  import:         common-settings
  main-is:        Main.hs
  hs-source-dirs: app src

library leetcode-core
  import:          common-settings

  -- cabal-fmt: expand src
  --
  exposed-modules:
    DynamicProgramming.Solution118
    DynamicProgramming.Solution198
    DynamicProgramming.Solution279
    DynamicProgramming.Solution322
    DynamicProgramming.Solution70
    Solution121
    Solution131
    Solution17
    Solution215
    Solution22
    Solution31
    Solution39
    Solution4
    Solution46
    Solution47
    Solution784
    Solution79
    Solution94
    Tree

  hs-source-dirs:  src

test-suite leetcode-tests
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs

  -- cabal-fmt: expand test
  --
  other-modules:
    DynamicProgramming.Solution118Spec
    DynamicProgramming.Solution198Spec
    DynamicProgramming.Solution70Spec
    Solution121Spec
    Solution131Spec
    Solution17Spec
    Solution215Spec
    Solution22Spec
    Solution39Spec
    Solution46Spec
    Solution47Spec
    Solution4Spec
    Solution784Spec
    Solution79Spec
    Solution94Spec

  hs-source-dirs: test
  build-depends:
    , base           ^>=4.14.3.0
    , hspec          >=2.7
    , leetcode-core
